# ProspectPlusAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.yaml  deploy.sh  pyproject.toml  requirements.txt
docs/: API.md  BUILD_SUMMARY.md  DEPLOYMENT.md  EXAMPLES.md
prospectplusagent/: __init__.py  cli.py  config.py  main.py
prospectplusagent/api/: __init__.py  agent.py  analytics.py  auth.py  prospects.py
prospectplusagent/core/: __init__.py  agent.py  auth.py  database.py
prospectplusagent/models/: __init__.py  database.py
prospectplusagent/static/css/: style.css
prospectplusagent/static/js/: app.js
prospectplusagent/templates/: index.html
tests/: conftest.py  test_api.py  test_core.py
