[tool.poetry]
name = "prospectplusagent"
version = "1.0.0"
description = "Enterprise-grade AI agent for prospect and lead management"
authors = ["StackConsult Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
openai = "^1.10.0"
anthropic = "^0.18.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
chromadb = "^0.4.22"
click = "^8.1.7"
rich = "^13.7.0"
httpx = "^0.26.0"
jinja2 = "^3.1.3"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
prometheus-client = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.11"
mypy = "^1.8.0"
httpx = "^0.26.0"

[tool.poetry.scripts]
prospectplus = "prospectplusagent.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
